--- a/memes.html
+++ b/memes.html
@@ -29,6 +29,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse justify-content-end " id="navbarNav">
                 <ul class="navbar-nav ">
                     <li class="nav-item">
@@ -48,6 +49,7 @@
             </div>
         </div>
     </nav>
+    <p class="container d-block d-md-none" style="margin-top:20px;">Slide to watch more -> </p>
     <div class="container meme ">
         <div class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -100,6 +102,7 @@
         </div>
 
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
