--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h2 class="casthead">Cast</h2>
         <div class="cast-row ">
             <img src="images/joey.jfif" alt="" class="one d-block">
-            <h2>Joey Tribiani</h2>
+            <h2 class="cast-names">Joey Tribiani</h2>
             <p>Despite being close to all the friends, he is especially open with Chandler, who his
                 also his roommate. Joey is a small time actor, who desperately wants fame and fortune, and Chandler has
                 high hopes of Joey, so helps Joey with money for acting lessons and professional photographs. Despite
