--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
                 best friend Monica Geller, and eventually befriends the other 4 and Monica's older brother, Ross.</p>
 
         </div>
+        <br>
         <div class="cast-row">
             <img src="images/monica.jpg" alt="" class="two  d-block">
-            <h2>Monica Geller</h2>
+            <h2 class="monica">Monica Geller</h2>
             <p>A compulsive neat freak, who has trouble with her love life. Monica was teased when she
                 was in high school for being overweight. However, now a head-chef at a top restaurant in Manhatten, she
                 has lost all her excessive weight, and just wants to start a family with 'the right guy' to complete a
